Fixed the issue of scrollbars on body, other misc. fixes

--- a/demo/css/ytbg.css
+++ b/demo/css/ytbg.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+html{padding:0;margin:0;width:100%;height:100%;}
+body{padding:0;margin:0;width:100%;height:100%;}
+/*body{width:99.5%;height:98.25%;}*/
+
 iframe{pointer-events:none;}
 
 #ytbgcontentdiv {
